--- a/test.ipynb
+++ b/test.ipynb
@@ -4,39 +4,58 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.transformations import center_to_topleft, apply_transformation, get_matrices_for_smooth_transformation\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pygame 2.6.1 (SDL 2.28.4, Python 3.12.9)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+      "[[400. 320.]\n",
+      " [480. 320.]\n",
+      " [480. 400.]\n",
+      " [400. 400.]]\n",
+      "[[0 1]\n",
+      " [2 1]\n",
+      " [2 0]\n",
+      " [0 0]]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1.  , 0.  ],\n",
+       "        [0.  , 1.  ]],\n",
+       "\n",
+       "       [[1.25, 0.  ],\n",
+       "        [0.  , 1.  ]],\n",
+       "\n",
+       "       [[1.5 , 0.  ],\n",
+       "        [0.  , 1.  ]],\n",
+       "\n",
+       "       [[1.75, 0.  ],\n",
+       "        [0.  , 1.  ]],\n",
+       "\n",
+       "       [[2.  , 0.  ],\n",
+       "        [0.  , 1.  ]]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import pygame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "WHITE = (255, 255, 255)\n",
-    "BLACK = (0, 0, 0)\n",
-    "RED = (255, 0, 0)\n",
-    "GREEN = (0, 128, 0)\n",
-    "BLUE = (0, 0, 255)\n",
-    "YELLOW = (255, 255, 0)\n",
-    "ORANGE = (255, 165, 0)\n",
-    "GREY = (128, 128, 128)\n",
-    "\n",
-    "WIDTH = 800\n",
-    "HEIGHT = 800\n",
-    "UNIT = 80\n"
+    "v = np.array(((0, 1), (1, 1), (1, 0), (0, 0)))\n",
+    "m = np.array(((2, 0), (0, 1)))\n"
    ]
   },
   {
@@ -45,28 +64,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def center_to_topleft(v):\n",
-    "    v = np.array(v)\n",
-    "    return v * UNIT * np.array((1, -1)) + np.array((WIDTH/2, HEIGHT/2))"
+    "m = np.array([[1, 1], [0, 1]])  # Shear transformation matrix\n",
+    "steps = 5\n",
+    "smooth_matrices = get_matrices_for_smooth_transformation(m, steps)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 2]\n",
+      "[1. 1.]\n",
+      "[1.25 1.25]\n",
+      "[1.5 1.5]\n",
+      "[1.75 1.75]\n",
+      "[2. 2.]\n"
+     ]
+    }
+   ],
    "source": [
-    "def transform_vec(v, m):\n",
-    "    v = np.array(v)\n",
-    "    if len(v.shape) == 1:\n",
-    "        return np.matmul(m, v)\n",
-    "    else:\n",
-    "        return np.matmul(m, v.T).T"
+    "k = ((1, 1))\n",
+    "m = np.array(((0, 2), (2, 0)))\n",
+    "smooth_matrices = get_matrices_for_smooth_transformation(m, 5)\n",
+    "print(apply_transformation(k, m))\n",
+    "k_temp = k\n",
+    "for M in smooth_matrices:\n",
+    "    print(apply_transformation(k, M))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +196,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.42383345e+00,  2.67687901e+00],\n",
+       "       [-7.12655754e-01,  2.10258790e-01],\n",
+       "       [-6.78605762e-01,  5.64633650e-01],\n",
+       "       [ 1.07302764e+00, -1.62794188e+00],\n",
+       "       [ 3.88282328e-01,  9.14157744e-01],\n",
+       "       [ 6.63771803e-01,  4.77581270e-01],\n",
+       "       [ 7.76101356e-01,  3.68565109e-01],\n",
+       "       [-3.94429887e-01, -6.70001777e-02],\n",
+       "       [ 1.83974861e-01, -1.77261951e-02],\n",
+       "       [ 8.88510741e-01, -1.27298362e+00],\n",
+       "       [ 7.21698361e-01,  1.42750753e+00],\n",
+       "       [-1.25925378e+00, -2.93538108e-01],\n",
+       "       [-9.80864385e-01, -6.78834775e-01],\n",
+       "       [ 7.05203910e-01,  2.94348303e-01],\n",
+       "       [-2.52152766e-01, -8.58612393e-01],\n",
+       "       [-6.64534386e-01,  1.72631457e+00],\n",
+       "       [ 2.86645994e-02, -1.18808399e+00],\n",
+       "       [-7.78423444e-01,  1.43494495e+00],\n",
+       "       [-3.23533215e-01,  1.53410040e-01],\n",
+       "       [-9.99987347e-01, -1.18502616e+00],\n",
+       "       [ 1.20232486e-01,  2.23911841e-01],\n",
+       "       [ 1.75225051e-01,  1.38012007e+00],\n",
+       "       [ 1.12137644e+00,  1.83815867e-01],\n",
+       "       [-3.64049974e-01,  3.68666954e-01],\n",
+       "       [-4.48275763e-01,  1.32714239e+00],\n",
+       "       [-8.44184975e-01,  6.18954261e-02],\n",
+       "       [ 8.48126587e-01, -2.25828055e-02],\n",
+       "       [ 8.06692057e-01, -2.80172903e-01],\n",
+       "       [ 1.32031414e-01, -9.26890925e-01],\n",
+       "       [ 1.90428229e+00,  2.90311477e-01],\n",
+       "       [ 1.66735323e-01,  8.83322903e-01],\n",
+       "       [ 3.03755155e-01,  4.57363527e-02],\n",
+       "       [-4.93503141e-01, -4.71588408e-01],\n",
+       "       [ 3.78636033e-01, -2.29891277e+00],\n",
+       "       [-9.10578682e-01,  1.34500658e+00],\n",
+       "       [ 1.70693643e+00,  5.31798815e-02],\n",
+       "       [-5.13472783e-01,  2.29235383e-01],\n",
+       "       [-8.22548731e-01, -1.15512902e+00],\n",
+       "       [-6.76782513e-01, -9.85227251e-03],\n",
+       "       [ 9.20305992e-02,  1.06208926e+00],\n",
+       "       [ 1.64706824e-01, -1.71342595e-01],\n",
+       "       [-4.67222823e-01, -1.00504654e+00],\n",
+       "       [-2.45631827e-01, -8.58175064e-01],\n",
+       "       [-1.08757400e+00, -4.28445975e-01],\n",
+       "       [ 4.88012634e-01, -5.69761014e-01],\n",
+       "       [-1.31277506e+00,  1.26484838e+00],\n",
+       "       [ 1.26930407e+00,  5.22725151e-01],\n",
+       "       [-1.09515645e+00,  8.01222984e-01],\n",
+       "       [-9.89539827e-01,  2.13732068e-01],\n",
+       "       [-1.08733200e+00,  8.55264150e-01],\n",
+       "       [ 2.41662728e-03,  1.63437866e-01],\n",
+       "       [ 1.07790969e+00,  7.19954778e-01],\n",
+       "       [ 1.14750645e+00,  2.49058324e-01],\n",
+       "       [-7.89194556e-01, -3.37248926e-01],\n",
+       "       [ 1.10316868e+00, -6.43154175e-01],\n",
+       "       [-4.00588838e-01,  2.32545946e-02],\n",
+       "       [ 7.00424517e-01,  3.43459115e-01],\n",
+       "       [-2.67524756e-01, -1.42194266e+00],\n",
+       "       [-8.94607041e-02,  2.32592672e-01],\n",
+       "       [-8.51746808e-01,  7.98489590e-01],\n",
+       "       [ 8.89396433e-01, -1.04778139e+00],\n",
+       "       [-5.87241648e-01, -6.48384178e-01],\n",
+       "       [ 1.37562261e+00,  1.31321928e-01],\n",
+       "       [ 2.25767995e+00,  2.51546737e-01],\n",
+       "       [ 1.81070990e-01,  1.74109792e-01],\n",
+       "       [ 1.06939174e+00,  8.00279179e-02],\n",
+       "       [ 1.13304993e+00, -9.12662290e-01],\n",
+       "       [ 1.59941591e+00,  1.84569820e+00],\n",
+       "       [-3.36046212e-01, -1.33302550e-01],\n",
+       "       [ 1.20050351e+00,  1.09955911e+00],\n",
+       "       [-1.36021632e+00, -1.54654538e-01],\n",
+       "       [ 6.41154680e-01,  2.34617986e-01],\n",
+       "       [-8.44765046e-01, -4.38255308e-02],\n",
+       "       [ 6.02508613e-01,  5.53693786e-01],\n",
+       "       [ 6.01204858e-01,  2.57188491e+00],\n",
+       "       [ 5.79800587e-01,  2.73675415e-01],\n",
+       "       [ 8.13289064e-02,  7.93360559e-01],\n",
+       "       [-7.90160842e-01, -2.37006661e+00],\n",
+       "       [ 2.39416236e-01,  1.03163173e+00],\n",
+       "       [-4.58802162e-01, -9.62388119e-02],\n",
+       "       [ 2.15766652e-01,  1.24147821e+00],\n",
+       "       [ 2.39909004e-01, -2.32986340e+00],\n",
+       "       [ 2.54888741e-01, -9.55529815e-01],\n",
+       "       [ 9.59691154e-01,  2.54377112e-01],\n",
+       "       [ 1.90180256e-02,  1.31894869e+00],\n",
+       "       [-3.81965133e-01,  1.17715110e+00],\n",
+       "       [-1.94473656e+00,  2.15423248e+00],\n",
+       "       [-2.19276231e-01, -4.86181198e-01],\n",
+       "       [ 3.96928184e-01, -2.06758874e-01],\n",
+       "       [ 2.80721681e-01,  2.42403992e+00],\n",
+       "       [-6.50242779e-01,  1.31827846e-02],\n",
+       "       [ 7.88603731e-01, -3.03306128e-01],\n",
+       "       [-5.24884935e-02, -1.53916279e+00],\n",
+       "       [-1.10390514e+00,  9.67466877e-01],\n",
+       "       [-2.59111376e-01,  1.07697483e+00],\n",
+       "       [ 4.01018414e-01, -7.42703349e-01],\n",
+       "       [-1.04123114e+00, -7.94636276e-01],\n",
+       "       [ 2.61107409e-01, -7.41149067e-01],\n",
+       "       [ 3.09830642e-01,  6.14744243e-01],\n",
+       "       [ 5.93711618e-01, -1.21762531e+00]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,48 +384,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 1.        ,  0.        ],\n",
-       "        [ 0.        ,  1.        ]],\n",
-       "\n",
-       "       [[ 0.88888889,  0.11111111],\n",
-       "        [-0.11111111,  0.88888889]],\n",
-       "\n",
-       "       [[ 0.77777778,  0.22222222],\n",
-       "        [-0.22222222,  0.77777778]],\n",
-       "\n",
-       "       [[ 0.66666667,  0.33333333],\n",
-       "        [-0.33333333,  0.66666667]],\n",
-       "\n",
-       "       [[ 0.55555556,  0.44444444],\n",
-       "        [-0.44444444,  0.55555556]],\n",
-       "\n",
-       "       [[ 0.44444444,  0.55555556],\n",
-       "        [-0.55555556,  0.44444444]],\n",
-       "\n",
-       "       [[ 0.33333333,  0.66666667],\n",
-       "        [-0.66666667,  0.33333333]],\n",
-       "\n",
-       "       [[ 0.22222222,  0.77777778],\n",
-       "        [-0.77777778,  0.22222222]],\n",
-       "\n",
-       "       [[ 0.11111111,  0.88888889],\n",
-       "        [-0.88888889,  0.11111111]],\n",
-       "\n",
-       "       [[ 0.        ,  1.        ],\n",
-       "        [-1.        ,  0.        ]]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "transformations = smooth_transformation(rotate_45, steps=10, identity_m=identity_m)\n",
     "transformations"
